Fixed cancel button issue on plugin modal and alignment of text button fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -243,3 +243,7 @@ a.dropdown-item:hover {
   max-height: 21rem;
   overflow: auto;
 }
+
+#avail-plugin{
+  padding: 0%;
+}
